--- a/Views/Interactions/PersistentInteractionWindow.xaml
+++ b/Views/Interactions/PersistentInteractionWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JiME"
+		xmlns:uc="clr-namespace:JiME.UserControls"
         mc:Ignorable="d"
         ContentRendered="Window_ContentRendered"
         Title="Persistent Event Editor" Style="{StaticResource DefaultWindow}" WindowStartupLocation="CenterScreen" Width="750" Closing="Window_Closing">
@@ -66,62 +67,7 @@
 					<!--token interaction-->
 					<Border x:Name="isEventBox" Style="{StaticResource callout}" Margin="0,10,0,0">
 						<StackPanel>
-							<StackPanel Orientation="Horizontal">
-								<CheckBox x:Name="isTokenCB" Content="This Event is a Token Interaction" Foreground="White" IsChecked="{Binding interaction.isTokenInteraction}" VerticalAlignment="Center" Click="isTokenCB_Click" IsEnabled="False"/>
-								<Button x:Name="tokenHelp" Background="#FFC98800" Click="tokenHelp_Click" Width="32" Height="32" Margin="10,0,0,0">
-									<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"/>
-								</Button>
-								<TextBlock Style="{StaticResource SubText}" Text="IMPORTANT: Persistent Events are required to be Token Interactions. Choose a Token Type below." VerticalAlignment="Center" Margin="10,0,0,0" TextWrapping="Wrap" Width="455" FontWeight="Bold"/>
-							</StackPanel>
-							<!--Since it uses the Token Type of the Event it delegates to, a Token Type is not needed-->
-							<StackPanel x:Name="tokenTypeBox" Orientation="Horizontal" Visibility="{Binding ElementName=isTokenCB, Path=IsChecked, Converter={StaticResource bvis}}">
-								<TextBlock Style="{StaticResource Heading}" Text="Token Type:" Margin="0,0,10,0"/>
-								<RadioButton x:Name="personRadio" Content="Person" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="searchRadio" Content="Search" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="threatRadio" Content="Threat" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="darkRadio" Content="Darkness" Click="tokenTypeClick"/>
-								<RadioButton x:Name="difficultGroundRadio" Content="Difficult Ground" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="fortifiedRadio" Content="Fortified" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="terrainRadio" Content="Terrain" Margin="0,0,20,0" Click="tokenTypeClick"/>
-							</StackPanel>
-							<StackPanel Orientation="Horizontal" Name="personType" Visibility="Collapsed">
-								<TextBlock Text="Person Type:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
-								<RadioButton x:Name="humanRadio" Content="Human" Margin="0,0,20,0"/>
-								<RadioButton x:Name="elfRadio" Content="Elf" Margin="0,0,20,0"/>
-								<RadioButton x:Name="hobbitRadio" Content="Hobbit" Margin="0,0,20,0"/>
-								<RadioButton x:Name="dwarfRadio" Content="Dwarf"/>
-							</StackPanel>
-							<WrapPanel Orientation="Horizontal" Name="terrainType" Visibility="Collapsed">
-								<TextBlock Text="Terrain Type:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
-								<RadioButton x:Name="barrelsRadio" Content="Barrels" Margin="0,0,20,0"/>
-								<RadioButton x:Name="barricadeRadio" Content="Barricade" Margin="0,0,20,0"/>
-								<RadioButton x:Name="boulderRadio" Content="Boulder" Margin="0,0,20,0"/>
-								<RadioButton x:Name="bushRadio" Content="Bush" Margin="0,0,20,0"/>
-								<RadioButton x:Name="chestRadio" Content="Chest" Margin="0,0,20,0"/>
-								<RadioButton x:Name="elevationRadio" Content="Elevation" Margin="0,0,20,0"/>
-								<RadioButton x:Name="fenceRadio" Content="Fence" Margin="0,0,20,0"/>
-								<RadioButton x:Name="firePitRadio" Content="Fire Pit" Margin="0,0,20,0"/>
-								<RadioButton x:Name="fountainRadio" Content="Fountain" Margin="0,0,20,0"/>
-								<RadioButton x:Name="logRadio" Content="Log" Margin="0,0,20,0"/>
-								<RadioButton x:Name="mistRadio" Content="Mist" Margin="0,0,20,0"/>
-								<RadioButton x:Name="pitRadio" Content="Pit" Margin="0,0,20,0"/>
-								<RadioButton x:Name="pondRadio" Content="Pond" Margin="0,0,20,0"/>
-								<RadioButton x:Name="rubbleRadio" Content="Rubble" Margin="0,0,20,0"/>
-								<RadioButton x:Name="statueRadio" Content="Statue" Margin="0,0,20,0"/>
-								<RadioButton x:Name="streamRadio" Content="Stream" Margin="0,0,20,0"/>
-								<RadioButton x:Name="tableRadio" Content="Table" Margin="0,0,20,0"/>
-								<RadioButton x:Name="trenchRadio" Content="Trench" Margin="0,0,20,0"/>
-								<RadioButton x:Name="wallRadio" Content="Wall" Margin="0,0,20,0"/>
-								<RadioButton x:Name="webRadio" Content="Web" Margin="0,0,20,0"/>
-							</WrapPanel>
-
-							<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0">
-							Token Interactions are triggered by players as they journey across the map. When a player clicks a Token, the Flavor Text below is shown. The player can decide to use an Action to Interact with the Token, after which the Event Text is shown, along with the Event itself.
-							</TextBlock>
-
-							<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0">
-								If this Token Interaction Event has already been assigned to a <Bold>Token</Bold> in the Tile Editor and you uncheck the Token Interaction setting above, that Token's <Italic>Token Interaction Trigger</Italic> will automatically be set to <Italic>None</Italic> because this Event will no longer be a Token Interaction.
-							</TextBlock>
+							<uc:TokenTypeSelector x:Name="tokenTypeSelector" Interaction="{Binding interaction}" Scenario="{Binding scenario}"/>
 						</StackPanel>
 					</Border>
 
