--- a/UserControls/TokenTypeSelector.xaml
+++ b/UserControls/TokenTypeSelector.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:JiME"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="600">
+             d:DesignHeight="300" d:DesignWidth="600">
 
 	<UserControl.Resources>
 		<BooleanToVisibilityConverter x:Key="bvis"/>
@@ -53,29 +53,59 @@
 			<RadioButton x:Name="hobbitRadio" Content="Hobbit" Margin="0,0,20,0"/>
 			<RadioButton x:Name="dwarfRadio" Content="Dwarf"/>
 		</StackPanel>
-		<WrapPanel Orientation="Horizontal" Name="terrainType" Visibility="Collapsed">
+		<StackPanel Orientation="Vertical" Name="terrainType" Visibility="Collapsed">
 			<TextBlock Text="Terrain Type:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
-			<RadioButton x:Name="barrelsRadio" Content="Barrels" Margin="0,0,20,0"/>
-			<RadioButton x:Name="barricadeRadio" Content="Barricade" Margin="0,0,20,0"/>
-			<RadioButton x:Name="boulderRadio" Content="Boulder" Margin="0,0,20,0"/>
-			<RadioButton x:Name="bushRadio" Content="Bush" Margin="0,0,20,0"/>
-			<RadioButton x:Name="chestRadio" Content="Chest" Margin="0,0,20,0"/>
-			<RadioButton x:Name="elevationRadio" Content="Elevation" Margin="0,0,20,0"/>
-			<RadioButton x:Name="fenceRadio" Content="Fence" Margin="0,0,20,0"/>
-			<RadioButton x:Name="firePitRadio" Content="Fire Pit" Margin="0,0,20,0"/>
-			<RadioButton x:Name="fountainRadio" Content="Fountain" Margin="0,0,20,0"/>
-			<RadioButton x:Name="logRadio" Content="Log" Margin="0,0,20,0"/>
-			<RadioButton x:Name="mistRadio" Content="Mist" Margin="0,0,20,0"/>
-			<RadioButton x:Name="pitRadio" Content="Pit" Margin="0,0,20,0"/>
-			<RadioButton x:Name="pondRadio" Content="Pond" Margin="0,0,20,0"/>
-			<RadioButton x:Name="rubbleRadio" Content="Rubble" Margin="0,0,20,0"/>
-			<RadioButton x:Name="statueRadio" Content="Statue" Margin="0,0,20,0"/>
-			<RadioButton x:Name="streamRadio" Content="Stream" Margin="0,0,20,0"/>
-			<RadioButton x:Name="tableRadio" Content="Table" Margin="0,0,20,0"/>
-			<RadioButton x:Name="trenchRadio" Content="Trench" Margin="0,0,20,0"/>
-			<RadioButton x:Name="wallRadio" Content="Wall" Margin="0,0,20,0"/>
-			<RadioButton x:Name="webRadio" Content="Web" Margin="0,0,20,0"/>
-		</WrapPanel>
+
+			<Grid Margin="0,5,0,10">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="auto"/>
+					<ColumnDefinition Width="*"/>
+				</Grid.ColumnDefinitions>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+
+				<!--Core Set-->
+				<Rectangle Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Fill="DarkGreen" />
+				<TextBlock Grid.Row="0" Grid.Column="0" Text="r" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+				<WrapPanel Grid.Row="0" Grid.Column="1">
+					<RadioButton GroupName="Terrain" x:Name="barrelsRadio" Content="Barrels" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="boulderRadio" Content="Boulder" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="bushRadio" Content="Bush" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="firePitRadio" Content="Fire Pit" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="mistRadio" Content="Mist" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="pitRadio" Content="Pit" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="statueRadio" Content="Statue" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="streamRadio" Content="Stream" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="tableRadio" Content="Table" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="wallRadio" Content="Wall" Margin="0,0,20,0" Foreground="White"/>
+				</WrapPanel>
+
+				<!-- Shadowed Paths -->
+				<Rectangle Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Fill="Black" />
+				<TextBlock Grid.Row="1" Grid.Column="0" Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+				<WrapPanel Grid.Row="1" Grid.Column="1">
+					<RadioButton GroupName="Terrain" x:Name="elevationRadio" Content="Elevation" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="logRadio" Content="Log" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="rubbleRadio" Content="Rubble" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="webRadio" Content="Web" Margin="0,0,20,0" Foreground="White"/>
+				</WrapPanel>
+
+				<!-- Spreading War -->
+				<Rectangle Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Fill="DarkRed" />
+				<TextBlock Grid.Row="2" Grid.Column="0" Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+				<WrapPanel Grid.Row="2" Grid.Column="1">
+					<RadioButton GroupName="Terrain" x:Name="barricadeRadio" Content="Barricade" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="chestRadio" Content="Chest" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="fenceRadio" Content="Fence" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="fountainRadio" Content="Fountain" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="pondRadio" Content="Pond" Margin="0,0,20,0" Foreground="White"/>
+					<RadioButton GroupName="Terrain" x:Name="trenchRadio" Content="Trench" Margin="0,0,20,0" Foreground="White"/>
+				</WrapPanel>
+			</Grid>
+		</StackPanel>
 
 		<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0">
 						Token Interactions are triggered by players as they journey across the map. When a player clicks a Token, the Flavor Text below is shown. The player can decide to use an Action to Interact with the Token, after which the Event Text is shown, along with the Event itself.
