--- a/Views/ScenarioWindow.xaml
+++ b/Views/ScenarioWindow.xaml
@@ -72,8 +72,8 @@
 					<!--Core Set-->
 					<Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-						<TextBlock Text="r" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+						<TextBlock Text="r" Foreground="White" FontSize="20" FontStyle="Italic" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+						<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" FontStyle="Italic" Foreground="White" Padding="0,0,5,0" IsEnabled="False" IsChecked="True"/>
 					</StackPanel>
 					<Rectangle Grid.Row="0" Grid.Column="1" Fill="Black" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
