--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -218,11 +218,11 @@
 				</Grid.RowDefinitions>
 
 				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="0">
-					<uc:SidebarListView x:Name="objectivesUC" Margin="5" Title="Objectives" />
+					<uc:SidebarListView x:Name="objectivesUC" Margin="5" Title="Objectives" ShowDuplicateButton="true" />
 				</Border>
 
 				<Border Grid.Row="2" BorderThickness="0,0,0,0" BorderBrush="Gray">
-					<uc:SidebarListView Margin="5" x:Name="interactionsUC" Title="Events" />
+					<uc:SidebarListView Margin="5" x:Name="interactionsUC" Title="Events" ShowDuplicateButton="true"/>
 				</Border>
 
 				<!--<GridSplitter HorizontalAlignment="Stretch" 
@@ -233,7 +233,7 @@
 				</GridSplitter>-->
 
 				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="4">
-					<uc:SidebarListView x:Name="triggersUC" Margin="5" Title="Triggers" />
+					<uc:SidebarListView x:Name="triggersUC" Margin="5" Title="Triggers" ShowDuplicateButton="true"/>
 				</Border>
 
 
