--- a/UserControls/TokenTypeSelector.xaml
+++ b/UserControls/TokenTypeSelector.xaml
@@ -54,7 +54,7 @@
 			<RadioButton x:Name="darkRadio" Content="Darkness" Margin="0,0,20,0" Click="tokenTypeClick"/>
 			<RadioButton x:Name="difficultGroundRadio" Content="Difficult Ground" Margin="0,0,20,0" Click="tokenTypeClick" IsEnabled="False" FontStyle="Italic"/>
 			<RadioButton x:Name="fortifiedRadio" Content="Fortified" Margin="0,0,20,0" Click="tokenTypeClick" IsEnabled="False" FontStyle="Italic"/>
-			<RadioButton x:Name="terrainRadio" Content="Terrain" Margin="0,0,20,0" Click="tokenTypeClick"/>
+			<RadioButton x:Name="terrainRadio" Content="Terrain" Margin="0,0,20,0" Click="tokenTypeClick" IsEnabled="False" FontStyle="Italic"/>
 		</StackPanel>
 		<StackPanel Orientation="Horizontal" Name="personType" Visibility="Collapsed">
 			<TextBlock Text="Person Type:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
