--- a/Views/TextEditorWindow.xaml
+++ b/Views/TextEditorWindow.xaml
@@ -15,13 +15,13 @@
 			<!--<RowDefinition Height="auto"/>-->
 		</Grid.RowDefinitions>
 
-		<StackPanel x:Name="descriptionBlock" Margin="5" Orientation="Horizontal">
+		<StackPanel Grid.Row="0" x:Name="descriptionBlock" Margin="5" Orientation="Horizontal">
 			<TextBlock Style="{StaticResource Heading}" Text="Short Description:" />
 			<TextBox x:Name="shortnameTB" Text="{Binding shortName}" Margin="10,0" MinWidth="300" Height="24" HorizontalAlignment="Left" FontSize="16"/>
 		</StackPanel>
 
 		<!--<TextBox Grid.Row="1" x:Name="pageText" AcceptsReturn="True" Background="{StaticResource bgColorLight}" Foreground="White" FontSize="14" TextWrapping="Wrap" Padding="5" Margin="5,5,5,0" BorderBrush="White" TextChanged="TextBox_TextChanged" VerticalScrollBarVisibility="Auto"/>-->
-		<uc:RichTextBoxIconEditor x:Name="pageText" TextHeight="400" MaxTextHeight="600"/>
+		<uc:RichTextBoxIconEditor Grid.Row="1" x:Name="pageText" TextHeight="400" MaxTextHeight="600"/>
 		
 		<!--page info-->
 		<!--<TextBlock x:Name="pageInfo" Grid.Row="2" Margin="10,0,10,0" Style="{StaticResource SubText}" Text="Info"/>
